[metadata]
name = deck_code_bot
version = 2.0.0
description = A deck code bot for Reddit
author = Will Buck
author_email = wccbuck@gmail.com
url = https://github.com/HearthSim/deck-code-bot/
download_url = https://github.com/HearthSim/deck-code-bot/tarball/master
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Games/Entertainment

[options]
packages = find:
zip_safe = True
install_requires =
    hearthstone
    praw

[options.packages.find]
exclude =
    tests
